# IU7-Computing-Algorithms

./: .gitignore  README.md
antsor/: README.md
antsor/lab_01/: CMakeLists.txt  error.h  func.cpp  func.h  interpol.cpp  interpol.h  lab_01.pro  lab_01.pro.user.627cc27  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  matrix.cpp  matrix.h  prog.cpp  progwindow.cpp  progwindow.h  progwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
antsor/lab_02/: lab_02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  spline.cpp  spline.h
antsor/lab_03/: array.cpp  array.h  circle.txt  data.txt  func.cpp  interpol.cpp  interpol.h  main.cpp  makefile  matrix.cpp  matrix.h  (+5 more)
ksupol/: README.md
lab_01/: data.txt  error.h  func.cpp  interpol.cpp  interpol.h  lab_01.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  progwindow.cpp  progwindow.h  progwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
lab_02/: func.cpp  func.h  lab_02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  spline.cpp  spline.h
lab_03/: array.cpp  array.h  data.txt  interpol.cpp  interpol.h  main.cpp  makefile  matrix.cpp  matrix.h  multidim.cpp  multidim.h  plist.cpp  plist.h  plist_make.cpp
lab_04/: data_rand.txt  data_x3.txt  func.cpp  func.h  lab_04.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  matrix.cpp  matrixsolve.cpp  matrixsolve.h  plist_make.cpp  plot.cpp  plot.h
lab_05/: compute.py  solve_snle.py  static_sum.txt
lab_06/: func.hpp  lab_06.pro  point.hpp  window.cpp  window.ui
(+123 files in other folders)
